--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,9 +1,11 @@
 apiVersion: v2
 name: vault
-version: 0.8.2
+
+version: "0.8.2"
 appVersion: 1.8.4
 kubeVersion: ">= 1.14.0-0"
 description: Official HashiCorp Vault Chart
+
 home: https://www.vaultproject.io
 icon: https://github.com/hashicorp/vault/raw/f22d202cde2018f9455dec755118a9b84586e082/Vault_PrimaryLogo_Black.png
 keywords: ["vault", "security", "encryption", "secrets", "management", "automation", "infrastructure"]
