--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -43,10 +43,19 @@ jobs:
           DRY_RUN: true
 
       # Update chart tag to the latest semver tag
-      - name: Update Chart Version
+      - name: Bump Chart Version
+        id: bump_chart_version
         env:
-          VERSION: ${{ steps.generate_tag.outputs.new_tag }}
-        run: make bump-chart
+          CHART_NAME: stakater-vault
+        run: |
+          OLD_TAG=$(sed -n -e 's/^version: //p' stakater-vault/Chart.yaml)
+          NEW_TAG=$(echo "$OLD_TAG" | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{if(length($NF+1)>length($NF))$(NF-1)++; $NF=sprintf("%0*d", length($NF), ($NF+1)%(10^length($NF))); print}')
+          echo "::set-output name=result::${NEW_TAG}"
+          echo '::echo::on'
+          echo Old Tag for "$CHART_NAME": "$OLD_TAG"
+          echo New Tag for "$CHART_NAME": "$NEW_TAG"
+          echo '::echo::off'
+          sed -i "s/^version:.*/version: ${NEW_TAG}/" stakater-vault/Chart.yaml
 
 
       - name: Publish Helm chart
