--- a/stakater-vault/Chart.yaml
+++ b/stakater-vault/Chart.yaml
@@ -6,7 +6,14 @@ appVersion: 1.8.4
 
 description: Official HashiCorp Vault Chart
 
-keywords: ["vault", "security", "encryption", "secrets", "management", "automation", "infrastructure"]
+keywords: 
+ - vault
+ - security
+ - encryption
+ - secrets
+ - management
+ - automation
+ - infrastructure
 
 sources:
   - https://github.com/hashicorp/vault
