--- a/stakater-vault/templates/server-route.yaml
+++ b/stakater-vault/templates/server-route.yaml
@@ -10,6 +10,7 @@ kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
   name: {{ template "vault.fullname" . }}
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   labels:
     helm.sh/chart: {{ include "vault.chart" . }}
     app.kubernetes.io/name: {{ include "vault.name" . }}
