--- a/stakater-vault/Chart.yaml
+++ b/stakater-vault/Chart.yaml
@@ -20,3 +20,5 @@ sources:
   - https://github.com/hashicorp/vault-helm
   - https://github.com/hashicorp/vault-k8s
   - https://github.com/hashicorp/vault-csi-provider
+
+descripition: stakater chart for vault , forked from hashicorp/vault-helm
